--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Koopa Composite</name>
   <description>Composite pattern library</description>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
   	<dependency>
   		<groupId>org.powermock</groupId>
